@@ -4,6 +4,7 @@ CHANGELOG RoundCube Webmail
 2008/11/19 (alec)
 ----------
 - Fix handling of some malformed messages (#1484438)
+- Speed up raw message body handling
 
 2008/11/15 (alec)
 ----------
